--- a/README
+++ b/README
@@ -5,3 +5,7 @@ The proxy is only needed to retrieve data from another domain (Cross Domain Poli
 
 
 hf.
+
+
+see http://hackerspace-bamberg.de/Kategorie:Projekt#r0ket-Tr4cking_.40_28C3
+try it out: http://longcat.de/ccc/28C3-r0ket-tr4cking/v2/track.html
