--- a/README
+++ b/README
@@ -8,4 +8,4 @@ hf.
 
 
 see http://hackerspace-bamberg.de/Kategorie:Projekt#r0ket-Tr4cking_.40_28C3
-try it out: http://longcat.de/ccc/28C3-r0ket-tr4cking/v2/track.html
+try it out: http://longcat.de/eh12/
